--- a/btcspace.html
+++ b/btcspace.html
@@ -12,8 +12,8 @@
     <link href="animations.css" rel="stylesheet" type="text/css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="non-responsive.css" rel='stylesheet' type='text/css'> <!-- This is to stop the navbar from collapsing on mobile.  Not fully working yet. -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	</head>
 <body ng-controller="btcSpaceCtrl">
   <div class="container">
