--- a/btcspace.html
+++ b/btcspace.html
@@ -50,8 +50,10 @@
       <div class="row">
         <h3>Filters</h3> 
         <div class="controls col-md-2 col-md-offset-5 col-s-3">  
-          Search all fields: <input type="text" name="filterText" ng-model="filterText" placeholder="Filter Text">
-          <br><input type="checkbox" ng-model='filterOP_RETURN.OP_RETURN'>OP_RETURN</input>
+          Search all fields: <input type="text" name="filterText" ng-model="filterText" placeholder="Filter Text"><br>
+          <input type="checkbox" ng-model='filterOP_RETURN.OP_RETURN'>OP_RETURN</input><br>
+          <select ng-model='reverseOrder' ng-options="opt as opt.label for opt in options">
+          </select>
       </div>
        <div class='col-md-4 col-md-offset-1 explanation'>
           <p>Text entered will match text in <em>any</em> field.</p>
@@ -63,7 +65,7 @@
           </div>
         </div>
         <ul class="transactions">
-          <li ng-repeat="transaction in transactions | filter:filterText | filter:filterOP_RETURN" class="animate-repeat">
+          <li ng-repeat="transaction in transactions | reverse:reverseOrder | filter:filterText | filter:filterOP_RETURN" class="animate-repeat">
             <section>
               <div class="transaction-ID"> 
                 <p>Hash: <a href='{{transaction["url"]}}'>{{transaction['data']['hash']}}</a></p>
