--- a/btcspace.html
+++ b/btcspace.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html ng-app="btcSpaceApp">
+<html ng-app="coinChatterApp">
 	<head>
 		<meta charset="utf-8">
-		<title>Bitcoin Space</title>
+		<title>Coin Chatter - OP_Return Bitcoin Blockchain Meta Data</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.3/angular.min.js" ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.3/angular-animate.js"></script>
     <script src="angularBTC.js"></script>
-    <link href="bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.min .css" rel="stylesheet" type="text/css">
 		<link href="btcspace.css" rel="stylesheet" type="text/css">
     <link href="animations.css" rel="stylesheet" type="text/css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="non-responsive.css" rel='stylesheet' type='text/css'> <!-- This is to stop the navbar from collapsing on mobile.  Not fully working yet. -->
-    <link href='https://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	</head>
-<body ng-controller="btcSpaceCtrl">
+<body ng-controller="coinChatterCtrl">
   <div class="container">
 	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -26,12 +26,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Bitcoin Space</a>
+          <a class="navbar-brand" href="#">Coin Chatter</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Controls:</a></li>
-            <li ng-click='nextTransaction()'><a href=""><i class="fa fa-step-forward"></i> Latest Transaction</a></li>
             <li ng-show='!ticker' ng-click='liveUpdate()'><a href=""><i class="fa fa-play-circle"></i> Start Ticker</a></li>
             <li ng-show="ticker" ng-click='stopUpdate()' class='active'><a href=""> <i class="fa fa-stop"></i>Stop Ticker</a></li>
             
@@ -43,12 +42,11 @@
       </div>
     </div>
     <div class="jumbotron">
-      <h1>BitCoin Space</h1>
+      <img src='img/Final.png' alt='Coin Chatter' class='img-responsive'>
       <h2>A BitCoin ticker with an eye to <b>metadata</b></h2>
       <p class="intro">In Bitcoin 0.9 OP_RETURN became an accepted part of Bitcoin transactions, allowing 80 bytes of data to be used for... whatever. OP_RETURN is still being implemented and the effects are yet to be seen. This site isn't any old Bitcoin transaction ticker, it has an eye to the metadata and a pulse on Bitcoin's future.</p>
       <p class="readmore"><a href='https://bitcoinfoundation.org/blog/?p=290'>Read more about OP_RETURN.</a></p>
       <p class="donations">Donatations appreciated: j1LDxWVyq3JU1vfeNZzMYFzBGAvFaZqXBBc</p>
-      <p ng-click='loadCoinSecretsTX()'>Parse python scraper output (don't worry I'll remove this)</p>
     </div>
     <div class="content" ng-init="init()">
       <div class="row">
@@ -72,7 +70,7 @@
           <li ng-repeat="transaction in transactions | reverse:reverseOrder | filter:filterText | filter:filterOP_RETURN" class="animate-repeat">
             <section>
               <div class="transaction-ID"> 
-                <p>Hash: <a href='{{transaction["url"]}}'>{{transaction['data']['hash']}}</a></p>
+                <p>Hash: <a target="_blank" href='{{transaction["url"]}}'>{{transaction['data']['hash']}}</a></p>
                  <p>Value (BTC): {{ transaction['BTC'] }}</p>
               </div>
               <div class="transaction-info">
