--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.3/angular-animate.js"></script>
     <script src="angularBTC.js"></script>
     <script src="emailhandler.js"></script>
-    <link href="bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="btcspace.css" rel="stylesheet" type="text/css">
     <link href="animations.css" rel="stylesheet" type="text/css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="non-responsive.css" rel='stylesheet' type='text/css'> <!-- This is to stop the navbar from collapsing on mobile.  Not fully working yet. -->
     <link href='http://fonts.googleapis.com/css?family=Lato:100,100italic,300italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic' rel='stylesheet' type='text/css'>
 	</head>
 <body ng-controller="coinChatterCtrl">
   <div class="container">
