Updated transaction IDs, added menu to navbar.

--- a/btcspace.html
+++ b/btcspace.html
@@ -26,7 +26,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Coin Chatter</a>
+          <a class="navbar-brand" href="#"><img src='img/Final.png' alt='Coin Chatter' class='brand-logo'></a>
+
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -45,8 +46,8 @@
       <img src='img/Final.png' alt='Coin Chatter' class='img-responsive'>
       <h2>A BitCoin ticker with an eye to <b>metadata</b></h2>
       <p class="intro">In Bitcoin 0.9 OP_RETURN became an accepted part of Bitcoin transactions, allowing 80 bytes of data to be used for... whatever. OP_RETURN is still being implemented and the effects are yet to be seen. This site isn't any old Bitcoin transaction ticker, it has an eye to the metadata and a pulse on Bitcoin's future.</p>
-      <p class="readmore"><a href='https://bitcoinfoundation.org/blog/?p=290'>Read more about OP_RETURN.</a></p>
-      <p class="donations">Donatations appreciated: j1LDxWVyq3JU1vfeNZzMYFzBGAvFaZqXBBc</p>
+      <p class="readmore"><a target="_blank" href='https://bitcoinfoundation.org/blog/?p=290'>Read more about OP_RETURN.</a></p>
+      <p class="donations">Donatations appreciated: 1LDxWVyq3JU1vfeNZzMYFzBGAvFaZqXBBc <img src='img/QRaddress.jpg' alt='Bitcoin Address via QR code.' class='img-responsive' id='QRcode'></p>
     </div>
     <div class="content" ng-init="init()">
       <div class="row">
