--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     </div>
     <div class="jumbotron">
       <h1>Contact Us</h1>
-      <p class="donations">Donatations appreciated: j1LDxWVyq3JU1vfeNZzMYFzBGAvFaZqXBBc</p>
+       <p class="donations">Donatations appreciated: 1LDxWVyq3JU1vfeNZzMYFzBGAvFaZqXBBc <img src='img/QRaddress.jpg' alt='Bitcoin Address via QR code.' class='img-responsive' id='QRcode'></p>
     </div>
     <div class="row">
       <div class="col-md-4 col-md-offset-1">
