--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="btcspace.html">Coin Chatter</a>
+          <a class="navbar-brand" href="#"><img src='img/Final.png' alt='Coin Chatter' class='brand-logo'></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Controls:</a></li>
-            <li ng-show='!ticker' ng-click='liveUpdate()'><a href=""><i class="fa fa-play-circle"></i> Start Ticker</a></li>
-            <li ng-show="ticker" ng-click='stopUpdate()' class='active'><a href=""> <i class="fa fa-stop"></i>Stop Ticker</a></li>
-            
+            <li><a target="_blank" href="index.html">Home</a></li>
+            <li><a target="_blank" href="loadOP_RETURN.html">Data Retention Data Ticker</a></li>
           </ul>
           <ul class='nav navbar-nav pull-right'>
             <li class='contact-us'><a href='contact.html'>Contact Us</a></li>
