--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="controls col-md-2 col-md-offset-5 col-s-3">  
           <h3>Filters</h3> 
           Search all fields: <input type="text" name="filterText" ng-model="filterText" placeholder="Filter Text"><br>
-          <input type="checkbox" ng-model='filterOP_RETURN.OP_RETURN'>OP_RETURN</input><br>
+          <input type="checkbox" ng-model='filterOP_RETURN.OP_RETURN'>Display OP_RETURN transactions only</input><br>
           <select ng-model='reverseOrder' ng-options="opt as opt.label for opt in options">
           </select>
       </div>
