--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src='img/Final.png' alt='Coin Chatter' class='brand-logo'></a>
+          <a class="navbar-brand" href="index.html"><img src='img/Final.png' alt='Coin Chatter' class='brand-logo'></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a target="_blank" href="index.html">Home</a></li>
-            <li><a target="_blank" href="loadOP_RETURN.html">Data Retention Data Ticker</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="archive.html">OP_RETURN archive</a></li>
           </ul>
           <ul class='nav navbar-nav pull-right'>
             <li class='contact-us'><a href='contact.html'>Contact Us</a></li>
