--- a/archive.html
+++ b/archive.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.3/angular.min.js" ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.3/angular-animate.js"></script>
+    <script src="js/ng-infinite-scroll.min.js"></script>
     <script src="angularBTC.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -31,12 +32,9 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
             <li><a href="archive.html">OP_RETURN archive</a></li>
             <li class="active"><a href="#">Controls:</a></li>
-            <li ng-show='!ticker' ng-click='liveUpdate()'><a href=""><i class="fa fa-play-circle"></i> Start Ticker</a></li>
-            <li ng-show="ticker" ng-click='stopUpdate()' class='active'><a href=""> <i class="fa fa-stop"></i>Stop Ticker</a></li>
-            
+            <li ng-click='scrollToBottom()'><a href=""><i class="fa fa-play-circle"></i>Scroll Down</a></li>            
           </ul>
           <ul class='nav navbar-nav pull-right'>
             <li class='contact-us'><a href='contact.html'>Contact Us</a></li>
@@ -57,7 +55,6 @@
           Search all fields: <input type="text" name="filterText" ng-model="filterText" placeholder="Filter Text"><br>
           <input type="checkbox" ng-model='filterOP_RETURN.OP_RETURN'>Display OP_RETURN transactions only</input><br>
           <select ng-model='reverseOrder' ng-options="opt as opt.label for opt in options"></select>
-          <button ng-click="loadNext()">Load next</button>
       </div>
        <div class='col-md-4 col-md-offset-1 explanation'>
           <p>Text entered will match text in <em>any</em> field.</p>
@@ -68,7 +65,7 @@
               <div class="metadata">Metadata</div>
           </div>
         </div>
-        <ul class="transactions">
+        <ul class="transactions" infinite-scroll='loadNext()' infinite-scroll-disabled='disableScroll'>
           <li ng-repeat="transaction in transactions | reverse:reverseOrder | filter:filterText | filter:filterOP_RETURN" class="animate-repeat">
             <section>
               <div class="transaction-ID"> 
