Removed facebook/twitter links for production.

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="coinChatterApp">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<title>Coin Chatter - OP_Return Bitcoin Blockchain Meta Data</title>
@@ -49,12 +49,12 @@
         <h2>Contact Info</h2>
         <h4><em>We want to be part of a new Bitcoin conversation, and we can't do that without you.   If you have something to say, let us know.</em></h4>
         <p>Our email is contact@coinchatter.info</p>
-        <p>Feel free to follow us on Twitter or Facebook [TODO: INSERT LINKS]</p>
+<!--         <p>Feel free to follow us on Twitter or Facebook [TODO: INSERT LINKS]</p>
         <span class="contact-icons">
           <i class="fa fa-facebook-square"></i>
           <i class="fa fa-twitter"></i>
           <i class="fa fa-github"></i>
-        </span>
+        </span> -->
       </div>
 
       <div class="col-md-6 col-md-offset-1">
