Updated navbar UI for controls.

--- a/archive.html
+++ b/archive.html
@@ -34,7 +34,7 @@
           <ul class="nav navbar-nav">
             <li><a href="archive.html">OP_RETURN archive</a></li>
             <li class="active"><a href="#">Controls:</a></li>
-            <li ng-click='scrollToBottom()'><a href=""><i class="fa fa-play-circle"></i>Scroll Down</a></li>            
+            <li ng-click='scrollToBottom()' class='control'><a href=""><i class="fa fa-play-circle"></i>Scroll Down</a></li>            
           </ul>
           <ul class='nav navbar-nav pull-right'>
             <li class='contact-us'><a href='contact.html'>Contact Us</a></li>
