--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src='img/Final.png' alt='Coin Chatter' class='brand-logo'></a>
+          <a class="navbar-brand" href="index.html"><img src='img/oval.png' alt='Coin Chatter' class='brand-logo'></a>
 
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="archive.html">OP_RETURN archive</a></li>
             <li class="active"><a href="#">Controls:</a></li>
-            <li ng-show='!ticker' ng-click='liveUpdate()'><a href=""><i class="fa fa-play-circle"></i> Start Ticker</a></li>
-            <li ng-show="ticker" ng-click='stopUpdate()' class='active'><a href=""> <i class="fa fa-stop"></i>Stop Ticker</a></li>
+            <li ng-show='!ticker' ng-click='liveUpdate()' class='control'><a href=""><i class="fa fa-play-circle"></i> Start Ticker</a></li>
+            <li ng-show="ticker" ng-click='stopUpdate()' class='active control'><a href=""> <i class="fa fa-stop"></i>Stop Ticker</a></li>
           </ul>
           <ul class='nav navbar-nav pull-right'>
             <li class='contact-us'><a href='contact.html'>Contact Us</a></li>
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="jumbotron">
-      <img src='img/Final.png' alt='Coin Chatter' class='img-responsive'>
+      <img src='img/oval.png' alt='Coin Chatter' class='img-responsive'>
       <h2>A BitCoin ticker with an eye to <b>metadata</b></h2>
       <p class="intro">In Bitcoin 0.9 OP_RETURN became an accepted part of Bitcoin transactions, allowing 80 bytes of data to be used for... whatever. OP_RETURN is still being implemented and the effects are yet to be seen. This site isn't any old Bitcoin transaction ticker, it has an eye to the metadata and a pulse on Bitcoin's future.</p>
       <p class="readmore"><a target="_blank" href='https://bitcoinfoundation.org/blog/?p=290'>Read more about OP_RETURN.</a></p>
