--- a/archive.html
+++ b/archive.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src='img/Final.png' alt='Coin Chatter' class='brand-logo'></a>
+          <a class="navbar-brand" href="index.html"><img src='img/oval.png' alt='Coin Chatter' class='brand-logo'></a>
 
         </div>
         <div class="collapse navbar-collapse">
@@ -50,13 +50,14 @@
     </div>
     <div class="content" ng-init="archiveInit()">
       <div class="row">
-        <div class="controls col-md-2 col-md-offset-5 col-s-3">  
-          <h3>Filters</h3> 
+        <h3>Filters</h3>
+        <div class="controls col-lg-3 col-lg-offset-5 col-s-3 col-md-3 col-md-offset-5">  
           Search all fields: <input type="text" name="filterText" ng-model="filterText" placeholder="Filter Text"><br>
-          <input type="checkbox" ng-model='filterOP_RETURN.OP_RETURN'>Display OP_RETURN transactions only</input><br>
-          <select ng-model='reverseOrder' ng-options="opt as opt.label for opt in options"></select>
+          <input type="checkbox" ng-model='filterOP_RETURN.OP_RETURN'></input><label>Display OP_RETURN transactions only<label><br>
+          <select ng-model='reverseOrder' ng-options="opt as opt.label for opt in options">
+          </select>
       </div>
-       <div class='col-md-4 col-md-offset-1 explanation'>
+       <div class='col-md-4  col-lg-4 explanation'>
           <p>Text entered will match text in <em>any</em> field.</p>
           <p>Checkbox restricts entries to those containing the OP_RETURN command.</p>
         </div>
