--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="col-md-6 col-md-offset-1">
-      <form id="form" role="form"> <!-- action="php/sendmail.php" -->
+      <form id="form" role="form">
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" class="form-control" name="name" placeholder="Name" />
