--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,16 @@
     <link href="non-responsive.css" rel='stylesheet' type='text/css'> <!-- This is to stop the navbar from collapsing on mobile.  Not fully working yet. -->
     <link href='http://fonts.googleapis.com/css?family=Lato:100,100italic,300italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic' rel='stylesheet' type='text/css'>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50449747-1', 'coinchatter.info');
+  ga('send', 'pageview');
+
+</script>
 	</head>
 <body ng-controller="coinChatterCtrl">
   <div class="container">
@@ -48,13 +58,12 @@
       <div class="col-md-4 col-md-offset-1">
         <h2>Contact Info</h2>
         <h4><em>We want to be part of a new Bitcoin conversation, and we can't do that without you.   If you have something to say, let us know.</em></h4>
-        <p>Our email is contact@coinchatter.info</p>
-<!--         <p>Feel free to follow us on Twitter or Facebook [TODO: INSERT LINKS]</p>
+        <p>Our email is coinchatter@gmail.com</p>
+        
         <span class="contact-icons">
-          <i class="fa fa-facebook-square"></i>
-          <i class="fa fa-twitter"></i>
-          <i class="fa fa-github"></i>
-        </span> -->
+          <a target="_blank" href="https://twitter.com/CoinChatterInfo"><i class="fa fa-twitter"></i></a>
+          <a target="_blank" href="https://github.com/Blackcomb/coinchatter"><i class="fa fa-github"></i></a>
+        </span>
       </div>
 
       <div class="col-md-6 col-md-offset-1">
